# eco-nojin

./: .dockerignore  .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  1.26.0  1.py  2.2.0  API_CONTRACT.md  BEAUTIFUL_FRONTEND_GITHUB.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_CONTRACTS.md  DEPLOY_IPFS.md  DEPS_AUDIT.md  DataCollectionGuide  Dockerfile  EcoNojin_Audit_Report.md  IMPROVEMENT_REPORT.md  INTEGRATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  License  MERGE_PLAN.md  MODULES_DEVELOPMENT_PLAN.md  PHASE1_COMPLETED.md  PHASE1_COMPLETION_REPORT.md  PHASE1_DEVELOPMENT_PLAN.md  PHASE2_COMPLETED.md  PHASED_IMPROVEMENT_ROADMAP.md  PLAN.md  PROJECT-ANALYSIS.md  PROJECT-MODULES.md  ProductionGIS.tsx  README.md  R_AND_D_STRATEGY.md  SECURITY_HARDENING_REPORT.md  TODO.md  add_approval_system.py  add_languages.py  add_media_to_homepage.py  (+276 more)
.github/: .gitignore  dependabot.yml
.venv.backup/: pyvenv.cfg
agents/: requirements.txt
alembic/: env.py
analysis_report/: report.json  report.md
analysis_reports/: analysis_20260602_154640.json  analysis_20260602_154640.txt  ecocoin_audit_20260714_075042.json  ecocoin_completer_20260715_023823.json  ecocoin_completer_20260715_030551.json  platform_builder_20260715_031648.json
api/: main.py  requirements.txt
apps/: TODO_DOCS.md  conftest.py  dependency_graph.dot  dependency_report.txt  main.py
backend/: Dockerfile  requirements.txt
blockchain/: README.md  package.json
contracts/: EcoCoin.sol  GaiaCertificate.sol  README.md  RegenerationMiner.sol  SECURITY_REPORT.md  SeedToken.sol  VerificationOracle.sol  (+6 more)
(+2300 files in other folders)
