[project]
name = "econojin"
version = "1.0.0"
description = "Scientific platform for ecological modeling and carbon tracking"
requires-python = ">=3.10"
authors = [{ name = "Econojin Team" }]
license = { text = "MIT" }
readme = "README.md"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "S",    # flake8-bandit (security)
]
ignore = ["S101", "ARG001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--tb=short"
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[tool.coverage.run]
source = ["apps", "core"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]